# MyGame

./: .gitignore  CMakeLists.txt  cmake_mingw.bat  cmake_vs2019.bat
lib/: glfw3.lib
project01/: CMakeLists.txt  main.cpp
project02/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
src/: CMakeLists.txt  ModelObject.cpp  ModelObject.h  ShaderProgram.cpp  ShaderProgram.h  WindowManager.cpp  WindowManager.h  events.cpp  events.h  main.cpp  render.cpp  render.h
